# tensor-check

./: .gitignore  .pre-commit-config.yaml  .pyre_configuration  README.md  pyproject.toml  setup.py
.tensor_check/: pyre_cache.pkl
dim_checker/: checker.py  cst_checker.py  pyre_utils.py  test_file.py  torch_annotations.py  types.py  with_cst.py
tensor_check/: checker.py  constraint_check.py  cst_checker.py  pyre_utils.py  tc_types.py  torch_annotations.py  types.py
test/: bin_op.py  checker_test.py  example_2.py  example_file.py  example_nn_module.py  simple_test.py  simple_tests.py  test_1.py  test_failures.py
tests/: __init__.py  class_and_obj.py  construct.py  constructors_test.py  def_and_call.py  nn_module.py  simple_test.py  test_failures.py  z3_test.py
tests/test_files/: bin_op.py  torch_arithmetic.py
