[project]
name = "mat-dim-checker"
version = '0.0.1'
description = "Matrix dimension checking with refinement types"
authors = [
    "Vincent Luczkow"
]
license = "MIT"
python = "^3.6"
readme = "README.md"

[dependencies]

[dev-dependencies]
pytest = "6.2.5"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"
